kubernetes/apps/network/envoy-gateway/config/redirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: stasky-http-to-https
  namespace: network
spec:
  parentRefs:
    - name: stasky
      sectionName: http
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ribera-http-to-https
  namespace: network
spec:
  parentRefs:
    - name: ribera
      sectionName: http
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
